--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^29.2.4",
     "@types/node": "^18.11.17",
+    "axios": "^1.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
+    "toastify": "^2.0.1",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
